# payment-com-cen

./: .gitignore  DEMO-GUIDE.md  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
app/agent-theater/: page.tsx
app/hitl-cockpit/: page.tsx
app/log-intelligence/: page.tsx
app/payment-trace/: page.tsx
app/recovery/: page.tsx
app/repair/: page.tsx
components/agent-theater/: agent-card.tsx
components/command-center/: corridor-map.tsx  health-gauges.tsx  incident-summary.tsx  stressed-services.tsx  workflow-progress.tsx
components/director-panel/: director-panel.tsx
components/guided-tour/: guided-tour-store.ts  guided-tour.tsx  tour-steps.ts  tour-toggle.tsx
components/repair/: agent-reasoning-panel.tsx  batch-approval-card.tsx  diff-view-card.tsx  exception-queue-panel.tsx  maker-checker-action-bar.tsx  payment-comparison-view.tsx  payment-record-panel.tsx  repair-audit-log.tsx  repair-queue-item.tsx  repair-summary-card.tsx
components/shared/: animated-counter.tsx  bank-switcher.tsx  nav-sidebar.tsx  scoreboard.tsx  toast.tsx
data/: README-data.md
data/bank-profiles/: bofa.json  citi.json  jpmorgan.json  wellsfargo.json
data/raw/: payments.parquet  queue_metrics.json  service_metrics.json
data/scenarios/: agent-steps.json  flagship.json
lib/: payment-trace-utils.ts  store.tsx
lib/claude/: narrator.ts
lib/data-loader/: index.ts
lib/workflow/: engine.ts  (+1 more)
scripts/: generate_data.py  pyproject.toml
types/: index.ts  repair.ts
(+9 files in other folders)
